force-app/main/default/objects/Rich_Text_Document__c/Rich_Text_Document__c.object-meta.xml
<CustomObject>
    <description>Stores rich text content for evaluating different rich text editor implementations in LWC</description>
    <label>Rich Text Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rich Text Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>