force-app/main/default/objects/Rich_Text_Document__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Stores the HTML content from the rich text editor</description>
    <inlineHelpText>The HTML content of this document</inlineHelpText>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>