force-app/main/default/objects/Rich_Text_Document__c/fields/Editor_Type__c.field-meta.xml
<CustomField>
    <fullName>Editor_Type__c</fullName>
    <description>Tracks which editor was used to create or last edit this content</description>
    <inlineHelpText>The rich text editor used for this document</inlineHelpText>
    <label>Editor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Quill</fullName>
            </value>
            <value>
                <fullName>TinyMCE</fullName>
            </value>
            <value>
                <fullName>CKEditor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>