force-app/main/default/objects/Rich_Text_Document__c/fields/Last_Editor_Event__c.field-meta.xml
<CustomField>
    <fullName>Last_Editor_Event__c</fullName>
    <description>Debug field to track the last event captured from the editor</description>
    <inlineHelpText>The most recent event captured from the rich text editor</inlineHelpText>
    <label>Last Editor Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>